--- a/.github/dependabot-update.yml
+++ b/.github/dependabot-update.yml
@@ -5,7 +5,22 @@
 
 version: 2
 updates:
-  - package-ecosystem: "" # See documentation for possible values
-    directory: "/" # Location of package manifests
+  - package-ecosystem: "maven"
+    directory: "/"
     schedule:
       interval: "weekly"
+    open-pull-requests-limit: 10
+
+    groups:
+      spring:
+        patterns:
+          - "org.springframework.*"
+      testing:
+        patterns:
+          - "junit*"
+          - "org.mockito*"
+      logging:
+        patterns:
+          - "ch.qos.logback*"
+          - "org.slf4j*"
+
