--- a/pom.xml
+++ b/pom.xml
@@ -3,6 +3,7 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
          http://maven.apache.org/xsd/maven-4.0.0.xsd">
+
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>net.nicolamurtas</groupId>
@@ -65,6 +66,7 @@
 
     <build>
         <plugins>
+
             <!-- Maven Compiler Plugin -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -77,29 +79,14 @@
                 </configuration>
             </plugin>
 
-            <!-- Maven Surefire Plugin for tests -->
+            <!-- Maven Surefire Plugin -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>3.2.2</version>
             </plugin>
 
-            <!-- Maven Jar Plugin with Main-Class -->
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-jar-plugin</artifactId>
-                <version>3.3.0</version>
-                <configuration>
-                    <archive>
-                        <manifest>
-                            <mainClass>net.nicolamurtas.android.emulator.AndroidEmulatorManager</mainClass>
-                            <addClasspath>true</addClasspath>
-                        </manifest>
-                    </archive>
-                </configuration>
-            </plugin>
-
-            <!-- Maven Assembly Plugin for fat JAR -->
+            <!-- Fat JAR con dipendenze -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-assembly-plugin</artifactId>
@@ -124,6 +111,58 @@
                     </execution>
                 </executions>
             </plugin>
+
+            <!-- Launch4j Plugin per EXE -->
+            <plugin>
+                <groupId>com.akathist.maven.plugins.launch4j</groupId>
+                <artifactId>launch4j-maven-plugin</artifactId>
+                <version>1.7.25</version>
+                <executions>
+                    <execution>
+                        <id>launch4j-exe</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>launch4j</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                    <outfile>${project.build.directory}/${project.artifactId}-${project.version}${exe.suffix}.exe</outfile>
+                    <jar>${project.build.directory}/${project.artifactId}-${project.version}-jar-with-dependencies.jar</jar>
+                    <mainClass>net.nicolamurtas.android.emulator.AndroidEmulatorManager</mainClass>
+                    <errTitle>Android Emulator Manager</errTitle>
+                    <chdir>.</chdir>
+                    <priority>normal</priority>
+                    <stayAlive>false</stayAlive>
+                    <restartOnCrash>false</restartOnCrash>
+                    <minVersion>21</minVersion>
+                    <bundledJrePath>${bundled.jre.path}</bundledJrePath>
+                    <bundledJre64Bit>true</bundledJre64Bit>
+                    <requires64Bit>true</requires64Bit>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
+
+    <!-- Profili per EXE -->
+    <profiles>
+        <!-- Richiede JRE di sistema -->
+        <profile>
+            <id>windows</id>
+            <properties>
+                <bundled.jre.path></bundled.jre.path>
+                <exe.suffix></exe.suffix>
+            </properties>
+        </profile>
+
+        <!-- Include una JRE locale -->
+        <profile>
+            <id>windows-standalone</id>
+            <properties>
+                <bundled.jre.path>jre</bundled.jre.path>
+                <exe.suffix>-standalone</exe.suffix>
+            </properties>
+        </profile>
+    </profiles>
+
 </project>
