--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
 
     <groupId>net.nicolamurtas</groupId>
     <artifactId>android-emulator-manager</artifactId>
-    <version>3.0.0-SNAPSHOT</version>
+    <version>3.0.0-beta</version>
     <packaging>jar</packaging>
 
     <name>Android Emulator Manager</name>
@@ -144,11 +144,11 @@
                             </jre>
                             <versionInfo>
                                 <fileVersion>3.0.0.0</fileVersion>
-                                <txtFileVersion>3.0.0-SNAPSHOT</txtFileVersion>
+                                <txtFileVersion>3.0.0-beta</txtFileVersion>
                                 <fileDescription>Android Emulator Manager</fileDescription>
                                 <copyright>MIT License - Nicola Murtas</copyright>
                                 <productVersion>3.0.0.0</productVersion>
-                                <txtProductVersion>3.0.0-SNAPSHOT</txtProductVersion>
+                                <txtProductVersion>3.0.0-beta</txtProductVersion>
                                 <productName>Android Emulator Manager</productName>
                                 <internalName>android-emulator-manager</internalName>
                                 <originalFilename>android-emulator-manager.exe</originalFilename>
